Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <div class="inner">
         <h1>Selfcare Website</h1>
-        <h2>Caregiver website which purpose is to provide information of how to treat and handle people who are physically limited</h2>
+        <h2>A caregiver website which purpose is to provide information on how to treat and handle physically limited patients</h2>
         <a href="https://github.com/Laska303/Autocuidado" class="button"><small>View project on</small>GitHub</a>
       </div>
     </header>
@@ -30,7 +30,17 @@
         <section id="main-content">
           <h3>Selfcare Website</h3>
 
-<p>This website was an academic project developed during my MSc, in which the main goal was to create a multimedia tool that </p>
+<p>This website was an academic project developed during my MSc, in which the main goal was to create a multimedia tool that allow the relatives of physically limited patients, to complement the information given by health professionals in their care and treatment.</p>
+
+<p><img src="http://dl.dropbox.com/u/9165833/AutocuidadoWebsite/Autocuidado_site.PNG" alt="website"></p>
+
+<h3>Contents</h3>
+
+<p>As this project is not finalized, it is recommended the visualization of the "Posicionar o Paciente Semi-Deitado de Lado" theme for the understanding of the developed work in this website.</p>
+
+<p>Navigation: Temas&gt;&gt; Virar-se &gt;&gt; Posicionar o paciente semi-deitado de lado (in the end of the page)</p>
+
+<p><img src="http://dl.dropbox.com/u/9165833/AutocuidadoWebsite/Autocuidado_tema.PNG" alt="content"></p>
         </section>
 
         <aside id="sidebar">
